--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -13,7 +13,8 @@
 
 
 
-
+<div class="row">
+<div class="col-md-6">
 <table class="table table-hover" id='tasks'>
 <thead>
 <tr>
@@ -24,7 +25,9 @@
 	<th>Days left</th>
 	
 	</tr>
-</head>
+</thead>
+</div>
+</div>
 
 <tbody>
 
@@ -34,13 +37,11 @@
 
 <h3>Add New Task </h3>
 <%= form_for [@list, Task.new], remote:true do |f| %>
-	<div class="field">
-
+	<div class="form-group">
     <%= f.text_area :body %>
   </div>
-
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit", class: "btn btn-success btn-primary" %>
   </div>
 <% end %>
 
