--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
   <div>
-	<%= f.submit "Sign up" %>
+	<%= f.submit "Sign up", class: "btn btn-success btn-primary" %>
 	</div>
 <% end %>
 </div>
