moves notice and alert to layout + small fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,11 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<div>
+
+<p id="notice"><%= notice %></p>
+<p id="alert"><%= alert %></p>
+</div>
 <%= yield %>
 </div>
 
