--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -18,14 +18,11 @@
         <td><%= task.days %></td>
         <td><%= task.done %></td>
         <td><%= task.list %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', list_tasks_path %></td>
+        <td><%= link_to 'Edit', edit_list_task_path(task.list, task) %></td>
+        <td><%= link_to 'Destroy', list_task_path(task.list, task), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Task', new_task_path %>
